4.2_the_project_step21/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-todo
  namespace: project
  labels:
    name: project-todo
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: project-todo
  template:
    metadata:
      name: project-todo
      labels:
        name: project-todo
        version: v1
    spec:
      containers:
        - name: project-todo
          image: todo-app-image
          resources:
            requests:
              cpu: 150m
              memory: 100Mi
            limits:
              cpu: 300m
              memory: 200Mi
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 80
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 80
